2014-10-02  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/package.el (package-import-keyring):
	Create gnupg directory private.  (Bug#17625#155)

2014-10-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-shell-completion-get-completions):
	Use python-shell--prompt-calculated-input-regexp from the
	process buffer (bug#18582).
	Don't assume that `line' comes from the process buffer.

2014-10-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el: Use lexical-binding (bug#18598).
	(make-frame): Use t rather than nil for tty's window-system.
	* startup.el (command-line): Use gui-method.

	Consolidate management/ownership of selections.
	* select.el (gui-get-selection-alist): New method.
	(gui-get-selection): Use it.  Rename from x-get-selection.
	(x-get-selection): Define as obsolete alias.
	(x-get-clipboard): Mark obsolete.
	(gui-get-primary-selection): New function.
	(x-get-selection-value): Mark obsolete.
	(gui-own-selection-alist, gui-disown-selection-alist)
	(gui-selection-owner-p-alist): New methods.
	(gui-set-selection): Use them.  Rename from x-set-selection.
	(x-set-selection): Define as obsolete alias.
	(gui--valid-simple-selection-p): Rename from
	x-valid-simple-selection-p.
	* w32-common-fns.el (gui-own-selection, gui-disown-selection)
	(gui-selection-owner-p, gui-get-selection): Define for w32.
	(w32-get-selection-value): Rename from x-get-selection-value.
	Use the new gui-last-selected-text.
	* term/x-win.el (x-get-selection-value): Remove.
	(x-clipboard-yank): Declare obsolete.
	(gui-own-selection, gui-disown-selection, gui-get-selection)
	(gui-selection-owner-p): Define for x.
	* term/w32-win.el (w32-win-suspend-error): Rename from
	x-win-suspend-error.
	* term/pc-win.el (w16-get-selection-value): Rename from
	x-get-selection-value.
	(w16-selection-owner-p): Rename from x-selection-owner-p.
	(gui-own-selection, gui-disown-selection, gui-get-selection)
	(gui-selection-owner-p): Define for pc.